--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "dependencies": {
-    "prop-types": "^15.6.1",
+    "prop-types": "^15.6.2",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-overdrive": "0.0.10",
+    "react-router-dom": "^4.3.1",
+    "styled-components": "^3.3.3"
   },
   "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.9.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
