--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-dropdown": "^1.5.0",
     "react-overdrive": "0.0.10",
     "react-router-dom": "^4.3.1",
     "styled-components": "^3.3.3"
